--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node ./src/server.js",
+    "start": "set NODE_ENV=production&& node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "lint": "eslint --fix ./src",
     "migrate": "node-pg-migrate"
