--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ PGHOST=host_pg
 PGPASSWORD=password_pg
 PGDATABASE=database
 PGPORT=port_pg
+
+# JWT token
+ACCESS_TOKEN_KEY=access_token
+REFRESH_TOKEN_KEY=refresh_token
+ACCESS_TOKEN_AGE=number_of_access_token_expired_length
