add export (producer) message broker

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ PGPORT=port_pg
 ACCESS_TOKEN_KEY=access_token
 REFRESH_TOKEN_KEY=refresh_token
 ACCESS_TOKEN_AGE=number_of_access_token_expired_length
+
+# Message broker
+RABBITMQ_SERVER=amqp://localhost
